--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   },
   "engines": {
     "node": ">=0.8.0"
+  },
+  "scripts": {
+    "test": "gulp test-src && gulp test-dist-concatenated && gulp test-dist-minified"
   }
 }
